[tool.poetry]
name = "twenty-forty-eight"
version = "0.1.0"
description = "Just another 2048 implementation for fun"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
packages = [
    { include = "game" }
]


[tool.poetry.dependencies]
python = "^3.10"
auto-name-enum = "^1.2.0"
py-buzz = "^3.1.1"
flake8 = "^4.0.1"
pydantic = "^1.9.0"
snick = "^1.3.0"
textual = "^0.1.17"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
game = "game.board:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
